# icryptoex

./: cargo.toml
backend_cex/: .env  Cargo.toml  diesel.toml
backend_cex/migrations/2024-06-07-072629_users/: up.sql
backend_cex/migrations/2024-06-25-115533_orders/: down.sql  up.sql
backend_cex/migrations/2024-06-26-114206_orders/: up.sql
backend_cex/migrations/2024-07-02-104211_users/: up.sql
backend_cex/src/: main.rs  schema.rs
backend_cex/src/auth/: mod.rs
backend_cex/src/auth/auth_controller/: user_controller.rs
backend_cex/src/auth/auth_dto/: user_dto.rs
backend_cex/src/auth/auth_service/: auth_middleware.rs  mod.rs  user_service.rs
backend_cex/src/orders/order_controller/: order_controller.rs
backend_cex/src/orders/order_dto/: order_dto.rs
backend_cex/src/orders/order_services/: order_service.rs
cex_common/: Cargo.toml
cex_common/src/: lib.rs
cex_identity/: .env  Cargo.toml
cex_identity/migrations/2024-06-07-072629_users/: up.sql
cex_identity/migrations/2024-06-07-111348_rename_password_hash_to_password/: up.sql
cex_identity/migrations/2024-06-26-114206_orders/: down.sql
cex_identity/migrations/2024-07-02-093829_country_col_length_increased/: down.sql  up.sql
cex_identity/src/: main.rs
cex_identity/src/auth/: mod.rs
cex_identity/src/auth/auth_dto/: user_dto.rs
cex_identity/src/auth/auth_service/: mod.rs  user_service.rs
cex_order_booK_engine/: .env  Cargo.toml  diesel.toml
cex_order_booK_engine/migrations/2024-07-08-071939_create_order_book_table/: down.sql  up.sql
cex_order_booK_engine/migrations/2024-07-09-094646_sell_data/: down.sql  up.sql
cex_order_booK_engine/src/: main.rs  schema.rs
cex_order_booK_engine/src/auth_guard/: auth_guard.rs
cex_order_booK_engine/src/orders/: mod.rs
cex_order_booK_engine/src/orders/order_controller/: mod.rs  order_controller.rs
cex_order_booK_engine/src/orders/order_dto/: mod.rs  order_dto.rs
cex_order_booK_engine/src/orders/order_services/: order_service.rs
cex_order_booK_engine/src/sell/: mod.rs
cex_order_booK_engine/src/sell/sell_controller/: mod.rs  sell_controller.rs
cex_order_booK_engine/src/sell/sell_dto/: mod.rs  sell_dto.rs
cex_order_booK_engine/src/sell/sell_service/: mod.rs  sell_service.rs
frontend/: package-lock.json  package.json  tsconfig.json
frontend/public/: index.html
frontend/src/Config.tsx/: api.tsx
frontend/src/app/: globals.css  layout.tsx  page.module.css  page.tsx
frontend/src/app/forget/: page.tsx
frontend/src/app/home/: page.js  page.module.css
frontend/src/app/login/: page.module.css  page.tsx
frontend/src/app/signup/: page.js  page.jsx  signup.module.css
frontend/src/components/: Toggle.tsx
frontend/src/components/Deposit/: Deposit.tsx
frontend/src/components/Footer/: Footer.tsx  footer.module.css
frontend/src/components/FuturesTrading/: Future.module.css  FuturesTrading.tsx
frontend/src/components/Header/: Header.module.css  Header.tsx
frontend/src/components/Login/: Login.module.css  Login.tsx
frontend/src/components/MarginTrading/: MarginTrading.tsx  margin.module.css
frontend/src/components/Signup/: Signup.tsx  signup.module.css
frontend/src/components/SubMenu/: FinancialChartAnnotations.tsx  SubMenu.tsx  Tokens.tsx  TradingViewWidget.jsx  submenu.module.css
frontend/src/components/spotTradingm/: Spot.tsx  spot.module.css
frontend/src/context/ThemeContext/: Theme.context.ts  Theme.context.tsx  Theme.provider.tsx  index.ts  utils.ts
frontend/src/redux/: ReduxProvider.tsx  store.ts
frontend/src/redux/slices/auth/: authslice.ts
