

# [package]
# name = "rust_auth"
# version = "0.1.0"
# edition = "2021"

#  [dependencies]
# actix-web = "4"
# actix-rt = "2"
# diesel = { version = "2.0", features = ["postgres", "r2d2"] }
# serde = { version = "1.0", features = ["derive"] }
# jsonwebtoken = "8"
# bcrypt = "0.14"
# env_logger = "0.10"
# uuid = { version = "1.3", features = ["serde", "v4"] }
# dotenv = "0.15"





[package]
name = "rust_auth"
version = "0.1.0"
edition = "2021"

 [dependencies]
actix-web = "4"
actix-rt = "2"
diesel = { version = "2.0", features = ["postgres", "r2d2"] }
serde = { version = "1.0", features = ["derive"] }
jsonwebtoken = "8"
bcrypt = "0.14"
env_logger = "0.10"
uuid = { version = "1.3", features = ["serde", "v4"] }
dotenv = "0.15"
 chrono = "0.4"
serde_json = "1.0"