
[package]
name = "cex_order_book_engine"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-rt = "2"
actix-cors = "0.7.0"
 diesel = { version = "2.0.0", features = [
  "postgres",
  "uuid",
  "r2d2",
  "numeric",
] }
 serde = { version = "1.0", features = ["derive"] }
 env_logger = "0.11.3"
uuid = { version = "1.0", features = ["serde", "v4"] }
dotenv = "0.15"
chrono = "0.4"
serde_json = "1.0"
bigdecimal = { version = "0.4", features = ["serde"] }
jsonwebtoken = "9.3.0"
futures = "0.3"
cex_common = { path = "../cex_common" }
reqwest = { version = "0.12.0", features = ["json"] }
 